Changed menu items

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -57,9 +57,11 @@
                 <li><a href="#">About</a></li>
 
                 <li class="menu-item-divided pure-menu-selected">
-                    <a href="#">Services</a>
+                    <a href="#">Details</a>
                 </li>
 
+                <li><a href="#">Registry</a></li>
+                <li><a href="#">RSVP</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </div>
