--- a/public/css/side-menu.css
+++ b/public/css/side-menu.css
@@ -110,6 +110,8 @@ appears on the left side of the page.
      #menu .pure-menu ul {
         border: none;
         background: transparent;
+        font-family: 'Sue Ellen Francisco', cursive;
+        font-size: 18pt;
     }
 
     /*
@@ -134,6 +136,8 @@ appears on the left side of the page.
     #menu .pure-menu-heading {
         background: #531480;
     }
+
+
         /*
         This styles a link within a selected menu item `<li>`.
         */
@@ -166,7 +170,7 @@ small screens.
     display: block; /* show this only on small screens */
     top: 0;
     left: 0; /* "#menu width" */
-    background: #000;
+    /*background: #000;*/
     background: rgba(0,0,0,0.7);
     font-size: 10px; /* change this value to increase/decrease button size */
     z-index: 10;
