--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,3 +1,22 @@
+    <div class="header">
+            <div class="pure-g">
+            <div class="pure-u-1-4">
+                <img class="pure-img-responsive" src="/img/alinaDisc.jpg" alt="Alina catches things!">
+            </div>
+            <div class="pure-u-1-4">
+                <img class="pure-img-responsive" src="/img/djabp.jpg" alt="Is that a tree?">
+            </div>
+            <div class="pure-u-1-4">
+                <img class="pure-img-responsive" src="/img/alinaDanWedding.jpg" alt="Hmmm...nice!">
+            </div>
+            <div class="pure-u-1-4">
+                <img class="pure-img-responsive" src="/img/danFrisbee.jpg" alt="How about that calf?">
+            </div>
+        </div>
+        <h1>DAN & ALINA</h1>
+        <h2>April 12, 2014</h2>
+    </div>
+
 
 
         <div class="content">
