--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,13 +9,16 @@
 
     {{!-- If you dont want to use Pure, delete out the snippet below --}}
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
-        <!--[if lte IE 8]>
-            {{addRemoteCSS "http://yui.yahooapis.com/pure/0.5.0/grids-responsive-old-ie-min.css"}}
-        <![endif]-->
-        <!--[if gt IE 8]><!-->
-            {{addRemoteCSS "http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css"}}
-        <!--<![endif]-->
-        
+    <!--[if lte IE 8]>
+        {{addRemoteCSS "http://yui.yahooapis.com/pure/0.5.0/grids-responsive-old-ie-min.css"}}
+    <![endif]-->
+    <!--[if gt IE 8]><!-->
+        {{addRemoteCSS "http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css"}}
+    <!--<![endif]-->
+    
+    {{addRemoteCSS "http://fonts.googleapis.com/css?family=Sue+Ellen+Francisco"}}
+
+
     {{addLocalCSS "/css/app.css"}}
     {{addLocalCSS "/css/side-menu.css"}}
     
@@ -69,25 +72,6 @@
 
     <div id="main">
 
-        <div class="header">
-            <div class="pure-g">
-            <div class="pure-u-1-4">
-                <img class="pure-img-responsive" src="/img/alinaDisc.jpg" alt="Alina catches things!">
-            </div>
-            <div class="pure-u-1-4">
-                <img class="pure-img-responsive" src="/img/djabp.jpg" alt="Is that a tree?">
-            </div>
-            <div class="pure-u-1-4">
-                <img class="pure-img-responsive" src="/img/alinaDanWedding.jpg" alt="Hmmm...nice!">
-            </div>
-            <div class="pure-u-1-4">
-                <img class="pure-img-responsive" src="/img/danFrisbee.jpg" alt="How about that calf?">
-            </div>
-        </div>
-        <h1>Dan & Alina</h1>
-        <h2>April 12, 2014</h2>
-    </div>
-
     {{{body}}}
 
 </div>
@@ -95,7 +79,7 @@
    
     <script>
         // data exposed by express-state
-        {{{state}}}
+        //{{{state}}}
     </script>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
