--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,20 +1,7 @@
     <div class="header">
-            <div class="pure-g">
-            <div class="pure-u-1-4">
-                <img class="pure-img-responsive" src="/img/alinaDisc.jpg" alt="Alina catches things!">
-            </div>
-            <div class="pure-u-1-4">
-                <img class="pure-img-responsive" src="/img/djabp.jpg" alt="Is that a tree?">
-            </div>
-            <div class="pure-u-1-4">
-                <img class="pure-img-responsive" src="/img/alinaDanWedding.jpg" alt="Hmmm...nice!">
-            </div>
-            <div class="pure-u-1-4">
-                <img class="pure-img-responsive" src="/img/danFrisbee.jpg" alt="How about that calf?">
-            </div>
-        </div>
+        {{> 4photos}}
         <h1>DAN & ALINA</h1>
-        <h2>April 12, 2014</h2>
+        <h2>April 12, 2015</h2>
     </div>
 
 
@@ -22,12 +9,29 @@
         <div class="content">
             <h2 class="content-subhead">Woah, what are you doing here?</h2>
             <p>
-                You've found your way to our wedding website, and we're pretty excited that you have.  Here you'll find information about the wedding, and also maybe some hidden secrets.  Try checking out the links on the left and seeing what you can find.   
+            You've found your way to our wedding website, and we're pretty excited that you have.  Here you'll eventually find information about the wedding, and also maybe some hidden secrets.  Try checking out the links on the left and seeing what you can find.   We're really not ready yet for you so you probably won't find much yet...   
+            You're probably here to find out some information about the wedding, so without further ado, here's the important facts. 
             </p>
 
-            <h2 class="content-subhead">Now Let's Speak Some Latin</h2>
+
+
+            <h2 class="content-subhead">Ceremony Details</h2>
+
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Location: <strong><a href="https://www.google.ca/maps/place/Stirling+Ave+Mennonite+Church/">Stirling Ave Mennonite Church, Kitchener ON</a></strong>
+            </p>
+
+            <p>
+            Date and Time: <strong><a href="/files/DanAlinaWedding.ics">Sunday April 12, 2015, 2:30pm</a></strong>
+            </p>
+
+            <h2 class="content-subhead">Reception Details</h2>
+            <p>
+            Location: <strong><a href="https://www.google.ca/maps/place/Victoria+Park+Pavillion/">Victoria Park Pavilion, Kitchener ON</a></strong>
+            </p>
+
+            <p>
+            Date and Time: <strong><a href="/files/DanAlinaWedding.ics">Sunday April 12, 2015, 5:30pm</a></strong>
             </p>
 
         </div>
