--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -45,34 +45,14 @@
 <body lang="en">
 
 <div id="layout">
-    <!-- Menu toggle -->
-    <a href="#menu" id="menuLink" class="menu-link">
-        <!-- Hamburger icon -->
-        <span></span>
-    </a>
-
-    <div id="menu">
-        <div class="pure-menu pure-menu-open">
-            <a class="pure-menu-heading" href="#">DAN & ALINA</a>
-
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-
-                <li class="menu-item-divided pure-menu-selected">
-                    <a href="#">Details</a>
-                </li>
-
-                <li><a href="#">Registry</a></li>
-                <li><a href="#">RSVP</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </div>
-    </div>
+    
+    {{> sidemenu}}
 
     <div id="main">
 
-    {{{body}}}
+        {{{body}}}
+
+    </div>
 
 </div>
 
