Made the four photos randomly change for all pages except the home page

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,16 +1,18 @@
     <div class="header">
-        {{> 4photos}}
+        {{> 4photoshome}}
         <h1>DAN & ALINA</h1>
         <h2>April 12, 2015</h2>
     </div>
 
 
-
         <div class="content">
             <h2 class="content-subhead">Woah, what are you doing here?</h2>
             <p>
-            You've found your way to our wedding website, and we're pretty excited that you have.  Here you'll eventually find information about the wedding, and also maybe some hidden secrets.  Try checking out the links on the left and seeing what you can find.   We're really not ready yet for you so you probably won't find much yet...   
-            You're probably here to find out some information about the wedding, so without further ado, here's the important facts. 
+            You've found your way to our wedding website a little bit too soon!  Here you'll eventually find information about the wedding, and also maybe some hidden secrets.  Try checking out the links on the left and seeing what you can find.   We're really not ready yet for you so you probably won't find much yet...   
+                    {{imgnumbers}}
+            </p>
+            <p>
+            You're probably here to find out some information about the wedding, so to tide you over until things are all setup, here's the important facts. 
             </p>
 
 
