Added forms to the RSVP and Contact Pages.  The forms are not yet connected to any backend services

--- a/public/css/side-menu.css
+++ b/public/css/side-menu.css
@@ -134,7 +134,7 @@ appears on the left side of the page.
     */
     #menu .pure-menu-selected,
     #menu .pure-menu-heading {
-        background: #531480;
+        background: #762fb1;
     }
 
 
