--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,21 +5,10 @@ body {
 }
 
 a, a:hover, a:visited, a:focus {
-    color: #531480;
+    color: #762fb1;
     text-decoration: none;
 }
 
-.jumbotron {
-    padding: 2em;
-    max-width: 700px;
-    margin: 30px auto;
-    border-radius: 3px;
-    border: 2px solid #222;
-}
-
-.jumbotron p {
-    text-align: left;
-}
 
 h1 small {
     color: #999;
@@ -35,6 +24,26 @@ h1 {
     background: transparent;
     border: 2px solid rgb(174, 216, 255);
     border-radius: 20px;
-    color: rgb(174, 216, 255);
+    color: #531480;
 
 }
+
+.button-success,
+.button-error,
+.button-warning,
+.button-secondary,
+.button-submit {
+    color: white;
+    border-radius: 4px;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+}
+
+.button-submit {
+    background: #2fb176;
+}
+
+textarea.message {
+    width:100%;
+    height:150px;
+}
+
