--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -3,15 +3,23 @@
         <h1>Contact</h1>
     </div>
 
-
-
         <div class="content">
+ 
+<form class="pure-form pure-form-stacked">
+    <fieldset>
+        
+        <label for="name">Name</label>
+        <input id="name" type="text" placeholder="Name" required>
 
-            <h2 class="content-subhead">Now Let's Speak Some Latin</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
+        <label for="email">Email</label>
+        <input id="email" type="email" placeholder="Email" required>
 
+        <label for="message">Message</label>
+        <textarea class="message" id="message" type="text" placeholder="Type your message here..." required></textarea>
+    </fieldset>
+    <button type="submit" class="pure-button pure-button-primary button-submit">Send Message</button>
+
+</form>        
         </div>
     </div>
 
