--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -5,7 +5,7 @@
 
         <div class="content">
  
-<form class="pure-form pure-form-stacked" action="/contact" method="post">
+<form id="contactform" class="pure-form pure-form-stacked" action="/contact" method="post">
     <fieldset>
         
         <label for="name">Name</label>
@@ -18,8 +18,49 @@
         <textarea class="message" id="message" name="message" type="text" placeholder="Type your message here..." required></textarea>
     </fieldset>
     <button type="submit" class="pure-button pure-button-primary button-submit">Send Message</button>
+</form>  
 
-</form>        
-        </div>
+    <div id="successMessage">
+        Your message was sent successfully.  Thank you!
+    </div>  
+    <div id="failedMessage">
+        Sorry, something went wrong with your submission.  Refresh and try again!
     </div>
+</div>
 
+<script type='text/javascript'>
+    /* attach a submit handler to the form */
+    $("#contactform").submit(function(event) {
+      
+      /* stop form from submitting normally */
+      event.preventDefault();
+
+      /* get some values from elements on the page: */
+      var $form = $( this ),
+          url = $form.attr( 'action' );
+
+    $.ajax({
+           type: "POST",
+           url: url,
+           data: $("#contactform").serialize(), // serializes the form's elements.
+           success: function(data) {
+               console.log(data);
+               console.log('process sucess');
+               $("#successMessage").show();
+               $form.hide();
+
+           },
+           error: function() {
+               console.log('process error');
+               $("$failedMessage").show();
+               $form.hide();
+           }
+           });
+    });
+
+
+    $(document).ready(function(event) {
+        $("#successMessage").hide();
+        $("#failedMessage").hide();
+    });
+</script>
