--- a/views/partials/sidemenu.handlebars
+++ b/views/partials/sidemenu.handlebars
@@ -8,17 +8,12 @@
             <a class="pure-menu-heading" href="/">DAN & ALINA</a>
 
             <ul>
-                <li>
-                    <a href="/">Home</a>
-                </li>
+                <li><a href="/">Home</a></li>
                 {{! class="menu-item-divided pure-menu-selected"}}
-                <li>
-                    <a href="/directions">Directions</a>
-                </li>
-                <li>
-                    <a href="/accomodation">Accomodation</a>
-                </li>
+                <li><a href="/directions">Directions</a></li>
+                <li><a href="/accomodation">Accomodation</a></li>
                 <li><a href="/registry">Registry</a></li>
+                <li><a href="/photos">Photos</a></li>
                 <li><a href="/rsvp">RSVP</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
