--- a/views/guests.handlebars
+++ b/views/guests.handlebars
@@ -12,6 +12,9 @@
                     <div class="pure-u-1-6 l-box">
                         Name
                     </div>
+                    <div class="pure-u-1-24 l-box">
+                        ?
+                    </div>
                     <div class="pure-u-1-6 l-box">
                         Meal
                     </div>
@@ -25,6 +28,9 @@
                 <div class="pure-u-1-1 guestrow">
                     <div class="pure-u-1-6 l-box">
                         {{name}}
+                        </div>
+                    <div class="pure-u-1-24 l-box">
+                        {{attendance}}
                     </div>
                     <div class="pure-u-1-6 l-box">
                         {{mealSelection}}
