Added some more content to the homepage and also to the registry page.

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -6,13 +6,14 @@
 
 
         <div class="content">
-            <h2 class="content-subhead">Woah, what are you doing here?</h2>
+            <h2 class="content-subhead">Welcome to our wedding website!</h2>
             <p>
-            You've found your way to our wedding website a little bit too soon!  Here you'll eventually find information about the wedding, and also maybe some hidden secrets.  Try checking out the links on the left and seeing what you can find.   We're really not ready yet for you so you probably won't find much yet...   
-                    {{imgnumbers}}
+            We are so excited to be getting married and we are happy to include our friends and families in the festivities. Continue to check in here for updates about the events of the day as we figure things out!  Try checking out the links on the left and seeing what you can find.
             </p>
+
             <p>
-            You're probably here to find out some information about the wedding, so to tide you over until things are all setup, here's the important facts. 
+            Cheers, <br/>
+            Alina and Dan
             </p>
 
 
@@ -35,7 +36,7 @@
             <p>
             Date and Time: <strong><a href="/files/DanAlinaWedding.ics">Sunday April 12, 2015, 5:30pm</a></strong>
             </p>
-
+            
         </div>
     </div>
 
