--- a/views/registry.handlebars
+++ b/views/registry.handlebars
@@ -6,10 +6,19 @@
 
 
         <div class="content">
-
-            <h2 class="content-subhead">Now Let's Speak Some Latin</h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            If you wish to contribute gifts to aid us in beginning our home together, please use these sites for suggestions of things that we would find useful. Your presence is a gift big enough for us though, so don't feel obliged to purchase us anything. <br/>
+(But Alina loves cards, so bring a card!)
+            </p>
+
+            <h2 class="content-subhead">Household Gifts and China</h2>
+            <p>
+                Some information here and a link to the place to go...
+            </p>
+
+            <h2 class="content-subhead">HBC</h2>
+            <p>
+                Some information here and a link the place to look for things...
             </p>
 
         </div>
