--- a/public/css/app.css
+++ b/public/css/app.css
@@ -88,9 +88,15 @@ textarea.message {
 
 .photoDiv {
     text-align:center;
-    margin-top: 20px;
+    margin-top: 35px;
     margin-bottom: 0px;
     margin-right: 0px;
     margin-left: 0px;
+}
+
+#footer {
+    text-align:center;
+    margin-bottom:20px;
+    margin-top:20px;
 }
 
