Tweaked CSS to improve positioning of hamburger menu and to make the date more obvious on the homepage.

--- a/public/css/side-menu.css
+++ b/public/css/side-menu.css
@@ -64,9 +64,10 @@ The content `<div>` is where all your content goes.
     }
      .header h2 {
         font-weight: 300;
-        color: #ccc;
+        font-size: 2em;
+        font-family: 'Sue Ellen Francisco', cursive;;
         padding: 0;
-        margin-top: 0;
+        margin-top: -20px;
     }
 
 .content-subhead {
