--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,7 +8,7 @@
         <div class="content">
             <h2 class="content-subhead">Welcome to our wedding website!</h2>
             <p>
-            We are so excited to be getting married and we are happy to include our friends and families in the festivities. Continue to check in here for updates about the events of the day as we figure things out!  Try checking out the links on the left and seeing what you can find.
+            We are so excited to be getting married and we are happy to include our friends and families in the festivities. Continue to check in here for updates about the events of the day as we figure things out!  Try clicking some of the links on the left and seeing what you can find.
             </p>
 
             <p>
