--- a/views/partials/4photos.handlebars
+++ b/views/partials/4photos.handlebars
@@ -1,4 +1,4 @@
-<div class="pure-g">  
+<div class="pure-g photos4">  
     {{#each images}} 
     <div class="pure-u-1-4">
         <img class="pure-img-responsive" src="{{path}}" alt="{{alt}}">
