--- a/views/partials/4photoshome.handlebars
+++ b/views/partials/4photoshome.handlebars
@@ -1,4 +1,4 @@
-        <div class="pure-g">
+        <div class="pure-g photos4">
             <div class="pure-u-1-4">
                 <img class="pure-img-responsive" src="/img/5.jpg" alt="Alina catches things!">
             </div>
