--- a/views/partials/sidemenu.handlebars
+++ b/views/partials/sidemenu.handlebars
@@ -13,6 +13,7 @@
                 <li><a href="/directions">Directions</a></li>
                 <li><a href="/accomodation">Accomodation</a></li>
                 <li><a href="/registry">Registry</a></li>
+                <li><a href="/saskatchewan">SK Celebration</a></li>
                 <li><a href="/photos">Photos</a></li>
                 <li><a href="/rsvp">RSVP</a></li>
                 <li><a href="/contact">Contact</a></li>
