Updated Registry page to contain two of three registries

--- a/views/registry.handlebars
+++ b/views/registry.handlebars
@@ -7,13 +7,27 @@
 
         <div class="content">
             <p>
-            If you wish to contribute gifts to aid us in beginning our home together, please use these sites for suggestions of things that we would find useful. Your presence is a gift big enough for us though, so don't feel obliged to purchase us anything. <br/>
+            If you wish to contribute gifts to aid us in beginning our home together, please use these sites for suggestions of things that we would find useful. Your presence is a gift big enough for us though, so don't feel obliged to purchase us anything.
+            </p>
+            <p>
 (But Alina loves cards, so bring a card!)
             </p>
 
-            <h2 class="content-subhead">Household Gifts and China</h2>
+            <h2 class="content-subhead"><a href="http://www.householdchina.ca/registry/view/12189" target="blank">Household Gifts and China</a></h2>  
             <p>
-                Some information here and a link to the place to go...
+            This registry contains cookware, baking supplies, and other kitchen items that we think would be useful to have.
+            </p>
+            <p>
+                <a href=http://www.householdchina.ca/registry/view/12189 target="blank">Link to Registry</a>
+            </p>
+            
+            <h2 class="content-subhead"><a href="http://www.tenthousandvillages.ca/shop/modules/ttvwishlist/view.php?token=D4B39F3F86CFDFEC" target="blank">Ten Thousand Villages</a></h2>
+
+            <p>
+            This registry contains some nice things from Ten Thousand Villages, a fair trade company that supports workers around the world by bringing their products and art to market.  
+            </p>
+            <p>
+                <a href="http://www.tenthousandvillages.ca/shop/modules/ttvwishlist/view.php?token=D4B39F3F86CFDFEC" target="blank">Link to Registry</a>
             </p>
 
             <h2 class="content-subhead">HBC</h2>
