Added new photos from the ones that Jacquie took.

--- a/views/partials/4photoshome.handlebars
+++ b/views/partials/4photoshome.handlebars
@@ -1,15 +1,15 @@
         <div class="pure-g photos4">
             <div class="pure-u-1-4">
-                <img class="pure-img-responsive" src="/img/5.jpg" alt="Alina catches things!">
+                <img class="pure-img-responsive" src="/img/46.jpg" alt="Are we having a good time yet?">
             </div>
             <div class="pure-u-1-4">
                 <img class="pure-img-responsive" src="/img/13.jpg" alt="Is that a tree?">
             </div>
             <div class="pure-u-1-4">
-                <img class="pure-img-responsive" src="/img/4.jpg" alt="Hmmm...nice!">
+                <img class="pure-img-responsive" src="/img/48.jpg" alt="Hmmm...nice!">
             </div>
             <div class="pure-u-1-4">
-                <img class="pure-img-responsive" src="/img/10.jpg" alt="How about that calf?">
+                <img class="pure-img-responsive" src="/img/5.jpg" alt="Alina catches things!">
             </div>
         </div>
 
