Added HBC link to registry page. Updated Registry page.

--- a/views/registry.handlebars
+++ b/views/registry.handlebars
@@ -7,7 +7,7 @@
 
         <div class="content">
             <p>
-            If you wish to contribute gifts to aid us in beginning our home together, please use these sites for suggestions of things that we would find useful. Your presence is a gift big enough for us though, so don't feel obliged to purchase us anything.
+            If you wish to contribute gifts to aid us in beginning our home together, please use these sites for suggestions of things that we would find useful. We are in the process of upgrading our current supplies and are interested in quality products that will last the rest of our marriage (forever!). We understand that many gifts may be more than you wish to contribute and that is ok! Please join with friends to purchase gifts or if you would like to contribute something smaller by giving us money this is fine. Just know that your presence is a gift big enough for us, so don't feel obliged to purchase anything to come to the party.
             </p>
             <p>
 (But Alina loves cards, so bring a card!)
@@ -30,9 +30,12 @@
                 <a href="http://www.tenthousandvillages.ca/shop/modules/ttvwishlist/view.php?token=D4B39F3F86CFDFEC" target="blank">Link to Registry</a>
             </p>
 
-            <h2 class="content-subhead">HBC</h2>
+            <h2 class="content-subhead"><a href="http://go.redirectingat.com/?id=2866x872015&xs=1&xcust=994&url=http%3A%2F%2Fgiftregistry.hbc.com%2Fgrworks%2Fprj%2Fgeneric_online%2Fjsp%2Fcommon%2Fgrbookmark.jsp%3Fretailerid%3D4%26cc%3D400121732093%26languageId%3D0" target="blank">Hudson's Bay Company</a></h2>
             <p>
-                Some information here and a link the place to look for things...
+            This registry contains some larger household items, including bedding, dishes, flatware, and small appliances.  
+            </p>
+            <p>
+                <a href="http://go.redirectingat.com/?id=2866x872015&xs=1&xcust=994&url=http%3A%2F%2Fgiftregistry.hbc.com%2Fgrworks%2Fprj%2Fgeneric_online%2Fjsp%2Fcommon%2Fgrbookmark.jsp%3Fretailerid%3D4%26cc%3D400121732093%26languageId%3D0" target="blank">Link to Registry</a>
             </p>
 
         </div>
