Added hotel details and removed target=blank from the registry pages.  Let people choose if they want new tabs

--- a/views/accomodation.handlebars
+++ b/views/accomodation.handlebars
@@ -7,11 +7,19 @@
 
         <div class="content">
 
-            <h2 class="content-subhead">Now Let's Speak Some Latin</h2>
+            <h2 class="content-subhead">Crowne Plaza Hotel - Kitchener</h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                We've booked an "open block" of rooms at the Crowne Plaza Hotel in Kitchener from April 10-April 13 (Friday to Sunday). These rooms are available over the phone by calling 1-877-408-6665 and mentioning the Balzer-Johnson Wedding or <a href="http://www.ihg.com/crowneplaza/hotels/us/en/kitchener/ykfcp/hoteldetail">online using the offer code BJW</a>.  
             </p>
 
+            <div class="google-maps">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2896.551078320977!2d-80.487686!3d43.44909099999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882bf4ed8be6f7ff%3A0x5fd4b3371fb90536!2sCrowne+Plaza+Kitchener-Waterloo!5e0!3m2!1sen!2sca!4v1415043294151" width="400" height="300" frameborder="0" style="border:0"></iframe>
+            </div>
+
+            <h2 class="content-subhead">Other hotels</h2>
+            <p>
+                There are quite a few other hotels in the city and the surrounding area.  Don't feel restricted to the one we've booked at. 
+            </p>
         </div>
     </div>
 
