--- a/views/registry.handlebars
+++ b/views/registry.handlebars
@@ -13,29 +13,29 @@
 (But Alina loves cards, so bring a card!)
             </p>
 
-            <h2 class="content-subhead"><a href="http://www.householdchina.ca/registry/view/12189" target="blank">Household Gifts and China</a></h2>  
+            <h2 class="content-subhead"><a href="http://www.householdchina.ca/registry/view/12189" >Household Gifts and China</a></h2>  
             <p>
             This registry contains cookware, baking supplies, and other kitchen items that we think would be useful to have.
             </p>
             <p>
-                <a href=http://www.householdchina.ca/registry/view/12189 target="blank">Link to Registry</a>
+                <a href=http://www.householdchina.ca/registry/view/12189 >Link to Registry</a>
             </p>
             
-            <h2 class="content-subhead"><a href="http://www.tenthousandvillages.ca/shop/modules/ttvwishlist/view.php?token=D4B39F3F86CFDFEC" target="blank">Ten Thousand Villages</a></h2>
+            <h2 class="content-subhead"><a href="http://www.tenthousandvillages.ca/shop/modules/ttvwishlist/view.php?token=D4B39F3F86CFDFEC" >Ten Thousand Villages</a></h2>
 
             <p>
             This registry contains some nice things from Ten Thousand Villages, a fair trade company that supports workers around the world by bringing their products and art to market.  
             </p>
             <p>
-                <a href="http://www.tenthousandvillages.ca/shop/modules/ttvwishlist/view.php?token=D4B39F3F86CFDFEC" target="blank">Link to Registry</a>
+                <a href="http://www.tenthousandvillages.ca/shop/modules/ttvwishlist/view.php?token=D4B39F3F86CFDFEC" >Link to Registry</a>
             </p>
 
-            <h2 class="content-subhead"><a href="http://go.redirectingat.com/?id=2866x872015&xs=1&xcust=994&url=http%3A%2F%2Fgiftregistry.hbc.com%2Fgrworks%2Fprj%2Fgeneric_online%2Fjsp%2Fcommon%2Fgrbookmark.jsp%3Fretailerid%3D4%26cc%3D400121732093%26languageId%3D0" target="blank">Hudson's Bay Company</a></h2>
+            <h2 class="content-subhead"><a href="http://go.redirectingat.com/?id=2866x872015&xs=1&xcust=994&url=http%3A%2F%2Fgiftregistry.hbc.com%2Fgrworks%2Fprj%2Fgeneric_online%2Fjsp%2Fcommon%2Fgrbookmark.jsp%3Fretailerid%3D4%26cc%3D400121732093%26languageId%3D0" >Hudson's Bay Company</a></h2>
             <p>
             This registry contains some larger household items, including bedding, dishes, flatware, and small appliances.  
             </p>
             <p>
-                <a href="http://go.redirectingat.com/?id=2866x872015&xs=1&xcust=994&url=http%3A%2F%2Fgiftregistry.hbc.com%2Fgrworks%2Fprj%2Fgeneric_online%2Fjsp%2Fcommon%2Fgrbookmark.jsp%3Fretailerid%3D4%26cc%3D400121732093%26languageId%3D0" target="blank">Link to Registry</a>
+                <a href="http://go.redirectingat.com/?id=2866x872015&xs=1&xcust=994&url=http%3A%2F%2Fgiftregistry.hbc.com%2Fgrworks%2Fprj%2Fgeneric_online%2Fjsp%2Fcommon%2Fgrbookmark.jsp%3Fretailerid%3D4%26cc%3D400121732093%26languageId%3D0" >Link to Registry</a>
             </p>
 
         </div>
