Updated hotel information

--- a/views/accomodation.handlebars
+++ b/views/accomodation.handlebars
@@ -7,9 +7,18 @@
 
         <div class="content">
 
+            <h2 class="content-subhead">Delta Hotel - Waterloo</h2>
+            <p>
+                Since the first hotel is now booked full, we've created another open block at the Delta Hotel in Waterloo.  <a href="http://deltahotels.com/Groups/Delta-Waterloo-Groups/Balzer-Peters-Johnson-Open-Wedding-Block">Use this link to book under the new open block</a>.
+            </p>
+
+            <div class="google-maps">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2895.890509434967!2d-80.52876000000003!3d43.462883!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882bf411a1796247%3A0x540ed58d99b86bc3!2sDelta+Waterloo!5e0!3m2!1sen!2sca!4v1422372351318" width="400" height="300" frameborder="0" style="border:0"></iframe>
+            </div>
+
             <h2 class="content-subhead">Crowne Plaza Hotel - Kitchener</h2>
             <p>
-                We've booked an "open block" of rooms at the Crowne Plaza Hotel in Kitchener from April 10-April 13 (Friday to Sunday). These rooms are available over the phone by calling 1-877-408-6665 and mentioning the Balzer-Johnson Wedding or <a href="http://www.ihg.com/crowneplaza/hotels/us/en/kitchener/ykfcp/hoteldetail">online using the offer code BJW</a>.  
+                We've booked an "open block" of rooms at the Crowne Plaza Hotel in Kitchener from April 10-April 13 (Friday to Sunday). These rooms are available over the phone by calling 1-877-408-6665 and mentioning the Balzer-Johnson Wedding or <a href="http://www.ihg.com/crowneplaza/hotels/us/en/kitchener/ykfcp/hoteldetail">online using the offer code BJW</a>.  It appears that this hotel is now full for that weekend. 
             </p>
 
             <div class="google-maps">
